<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fi.jamk.toastandnotification.MainActivity">

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/startScreenInformation"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:id="@+id/textView" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/toast"
        android:id="@+id/toastImage"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="25dp" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/note"
        android:id="@+id/notificationImage"
        android:layout_alignTop="@+id/toastImage"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/bug"
        android:paddingRight="50dp"
        android:id="@+id/dialogImage"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/notificationText"
        android:layout_alignTop="@+id/notificationImage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Toast"
        android:id="@+id/toastText"
        android:layout_below="@+id/toastImage"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Notification"
        android:id="@+id/notificationText"
        android:layout_alignTop="@+id/toastText"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Dialog"
        android:id="@+id/dialogText"
        android:layout_marginLeft="-5dp"
        android:layout_alignTop="@+id/notificationText"
        android:layout_alignStart="@+id/dialogImage" />

    <EditText
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:id="@+id/results"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/resultButton"
        android:text="@string/buttonText"
        android:layout_marginTop="62dp"
        android:layout_below="@+id/results"
        android:layout_centerHorizontal="true"
        android:onClick="checkResults"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explanationText"
        android:id="@+id/resultView"
        android:layout_below="@+id/results"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/randomNumberA"
        android:layout_alignTop="@+id/randomNumberB"
        android:layout_alignStart="@+id/toastImage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/randomNumberB"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/dialogText" />

</RelativeLayout>
